--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -31,7 +32,9 @@
     "mongoose": "^8.7.1",
     "mongoose-paginate-v2": "^1.8.5",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "rimraf": "^6.0.1",
+    "uninstall": "^0.0.0",
     "validator": "^13.12.0"
   },
   "type": "module",
